# paperjet

./: .commitlintrc.json  .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.optimized  LICENSE  biome.json  docker-compose.yml  nixpacks.toml  package.json  pnpm-workspace.yaml  readme.md  turbo.json
.github/workflows/: branch.yml  build-core.yml  build-ml.yml  deploy.yml  docker-build-push-fast.yml  docker-build-push.yml  docker-dev.yml  lint-typecheck.yml  main.yml  pr-title.yml  release.yml  staging.yml
apps/api/: .env.example  auth-schema.ts  biome.json  drizzle.config.ts  index.ts  instrumentation.ts  package.json  pnpm-lock.yaml  start.sh  tsconfig.json
apps/api/lib/: auth.ts  cors.ts  env.ts  logger.ts  (+5 more)
apps/backend/: start.sh  tsconfig.json
apps/dashboard/: biome.json  components.json  index.html  package.json  styles.css  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/docs/: docker-compose.yml  docs.json  index.mdx  openapi.json
apps/e2e/: .env.example  package.json  playwright.config.ts  tsconfig.json
apps/engine/: package.json
apps/ml/: Dockerfile  extract_images.py  main.py  package.json  pyproject.toml  requirements.txt
apps/website/: .dockerignore  Dockerfile  components.json  env.example  instrumentation-client.ts  nav-config.tsx  next.config.mjs  nixpacks.toml  package.json  postcss.config.cjs  styles.css  tailwind.config.ts  tsconfig.json
docs/: authentication-modes.md  deployment.md  docker-optimization.md  release.md  setup-flow.md
scripts/: docker-build-test.sh
(+432 files in other folders)
